--- a/client/index.html
+++ b/client/index.html
@@ -90,8 +90,10 @@
     Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
 
-    <input type="button" value="game" id="game" onclick="game()"></input>
-    <input type="button" value="remote" id="remote" onclick="remote()"></input>
+    <input type="button" value="local" id="local"></input>
+    <div class="peers">
+      
+    </div>
   </div>
   <script src="//simplewebrtc.com/latest.js"></script> 
   <script src="js/bind_polyfill.js"></script>
@@ -107,5 +109,6 @@
   <script src="js/game_manager.js"></script>
   <script src="js/remote_game_manager.js"></script>
   <script src="js/application.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
